test-cases/negative/test_137_invalid_import_relative_path.lay
# negative test: invalid relative import path
# expected: resolver should catch this

import utils from '../../../nonexistent/path/utils.lay'


